# SharDAG

./: .gitignore  Cargo.toml  README.md  githubToken.txt
benchmark/: .gitignore  fabfile.py  requirements.txt
benchmark/benchmark/: commands.py  config.py  local.py  logs.py  plot.py  remote.py  utils.py
benchmark/configs/: .committee-0.json  .committee-1.json  .committee-2.json  .committee-3.json  .committees.json  .node-0-0.json  .node-0-1.json  .node-0-2.json  .node-0-3.json  .node-1-0.json  .node-1-1.json  .node-1-2.json  .node-1-3.json  .node-2-0.json  .node-2-1.json  .node-2-2.json  .node-2-3.json  .node-3-0.json  .node-3-1.json  .node-3-2.json  .node-3-3.json  .parameters.json
benchmark/data/: res-hash-100-300s-tps-latency.csv  res-hash-200-300s-tps-latency.csv
benchmark/results/: lan-Hash-Broker-MStore-10-4-0-3-100-300-10000000-500000B.txt  lan-Hash-Broker-MStore-10-4-0-3-200-300-10000000-500000B.txt  lan-Hash-Broker-MStore-4-10-0-3-200-300-10000000-500000B.txt  lan-Hash-Broker-MStore-4-4-0-3-100-300-10000000-500000B.txt  lan-Hash-Broker-MStore-4-4-0-3-200-300-10000000-500000B.txt  lan-Hash-Broker-MStore-6-4-0-3-100-300-10000000-500000B.txt  lan-Hash-Broker-MStore-6-4-0-3-200-300-10000000-500000B.txt  lan-Hash-Broker-MStore-8-4-0-3-100-300-10000000-500000B.txt  lan-Hash-Broker-MStore-8-4-0-3-200-300-10000000-500000B.txt  lan-Hash-Monoxide-MStore-10-4-0-3-100-300-10000000-500000B.txt  lan-Hash-Monoxide-MStore-4-10-0-3-100-300-10000000-500000B.txt  lan-Hash-Monoxide-MStore-4-10-0-3-200-300-10000000-500000B.txt  lan-Hash-Monoxide-MStore-4-4-0-3-100-300-10000000-500000B.txt  lan-Hash-Monoxide-MStore-4-4-0-3-200-300-10000000-500000B.txt  lan-Hash-Monoxide-MStore-6-4-0-3-100-300-10000000-500000B.txt  lan-Hash-Monoxide-MStore-8-4-0-3-100-300-10000000-500000B.txt  lan-Hash-Monoxide-MStore-8-4-0-3-200-300-10000000-500000B.txt  lan-Hash-SharDAG-MStore-10-4-0-3-100-300-10000000-500000B.txt  lan-Hash-SharDAG-MStore-4-10-0-3-100-300-10000000-500000B.txt  lan-Hash-SharDAG-MStore-4-10-0-3-200-300-10000000-500000B.txt  (+20 more)
client/: Cargo.toml
client/src/: broker.rs  broker_client.rs  broker_client_para_node.rs  broker_manager.rs  common_client.rs  common_client_para.rs  common_client_para_node.rs  convert_tx.rs  lib.rs  tx1_processor.rs  tx1_verifier.rs  tx_sender copy.rs  tx_sender.rs  tx_sender_per_node.rs
mpt/: Cargo.toml
mpt/src/: db.rs  disk_trie.rs  diskdb.rs  lib.rs  mem_trie.rs  mmpt_store.rs  mpt_store.rs  node.rs  proof.rs  tests.rs  trie.rs
node/: Cargo.toml
test-workload/: brokers.csv  default-acc2shard.csv  input-e0.csv
worker/: Cargo.toml
worker/src/: acc_shard.rs  batch_fetcher.rs  batch_maker.rs  cs_msg_sender.rs  cs_msg_sender_b.rs  cs_msg_verifier.rs  cs_msg_verifier_serial.rs  csmsg_store.rs  error.rs  executor_b.rs  executor_m.rs  executor_s.rs  helper.rs  lib.rs  messages.rs  primary_connector.rs  processor.rs  quorum_waiter.rs  state_store.rs  state_transition.rs  synchronizer.rs  tx_convertor.rs  utils.rs  worker.rs
worker/src/tests/: acc_dis_table_test.rs  batch_maker_tests.rs  common.rs  cs_msg_verifier_tests.rs  helper_tests.rs  processor_tests.rs  quorum_waiter_tests.rs  synchronizer_tests.rs  worker_tests.rs
(+599 files in other folders)
