[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
env_logger = "0.7.1"
log = "0.4.11"
bytes = "1.0.1"
bincode = "1.3.1"
anyhow = "1.0.40"
rand = "0.7.3"
futures = "0.3.15"
csv =" 1.1"
serde_derive = "1.0.117"
serde_json = "1.0.59"
serde = { version = "1.0", features = ["derive"] }
hex            = { version = "0.4.2" }
chrono = "0.4"
ed25519-dalek = "1.0.1"
thiserror = "1.0.20"
permutation_iterator = "0.1.2"
tokio = { version = "1.5.0", features = ["sync", "rt", "macros"] }
tokio-util = { version = "0.6.2", features= ["codec"] }

async-std = { version = "1", features = ["attributes", "tokio1"] }
async-trait   = { version = "0.1.68" }
num_enum = "0.5.1"





config = { path = "../config" }
store = { path = "../store" }
crypto = { path = "../crypto" }
worker = { path = "../worker" }
network = { path = "../network" }

