[package]
name = "worker"
version = "0.1.0"
authors = ["Alberto Sonnino <asonnino@fb.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.5.0", features = ["sync", "rt", "macros", "full"] }
tokio-util = { version = "0.6.2", features= ["codec"] }
ed25519-dalek = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.0.1"
log = "0.4.14"
bincode = "1.3.3"
futures = "0.3.14"
merkletree = "0.22.0"
rand = "0.7.3"
thiserror = "1.0.20"
permutation_iterator = "0.1.2"
csv =" 1.1"
serde_derive = "1.0.117"
serde_json = "1.0.59"
hex            = { version = "0.4.2" }
async-std = { version = "1", features = ["attributes", "tokio1"] }
async-trait   = { version = "0.1.68" }
num_enum = "0.5.1"
chrono = "0.4"





crypto = { path = "../crypto" }
store = { path = "../store" }
config = { path = "../config" }
network = { path = "../network" }
primary = { path = "../primary" }
mpt = { path = "../mpt" }

[dev-dependencies]
rand = "0.7.3"

[features]
benchmark = []
